--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Vahap Onur YILDIRIM",
   "license": "ISC",
   "dependencies": {
     "puppeteer": "^20.9.0"
